2011-05-12  Peter Rosin  <peda@lysator.liu.se>

	* libc/time/strptime.c (first_day): Actually return the wday
	of the first day of the year.

2011-05-10  Corinna Vinschen  <vinschen@redhat.com>

	* libc/locale/lmessages.c (_C_messages_locale): Add missing comma.

2011-05-04  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/signal.h (psignal): Declare.
	* libc/sys/linux/psignal.c: Move from here...
	* libc/signal/psignal.c: ... to here. Document.
	* libc/sys/linux/Makefile.am (GENERAL_SOURCES): Move psignal.c from here...
	* libc/signal/Makefile.am (LIB_SOURCES): ... to here.
	(CHEWOUT_FILES): Add psignal.def.
	* libc/sys/linux/Makefile.in: Regenerate.
	* libc/signal/Makefile.in: Ditto.
	* libc/signal/signal.tex: Add references to psignal.

2011-05-04  Corinna Vinschen  <vinschen@redhat.com>

	* libc/locale/lmessages.h (__messages_load_locale): Declare.  Remove
	accidental declaration of __numeric_load_locale.
	* libc/locale/locale.c: Include timelocal.h to get declaration of
	__time_load_locale.
	(__set_locale_from_locale_alias): Fix return type.
	(__locale_msgcharset): Avoid compiler warnings.
	(_localeconv_r): Ditto.

2011-05-04  Andy Koppe  <andy.koppe@gmail.com>

	* libc/locale/locale.c (current_categories): On Cygwin, set LC_CTYPE 
	to C.UTF-8 to match initial __wctomb and __mbtowc settings.
	(lc_ctype_charset): On Cygwin, initialize to "UTF-8".
	(loadlocale): Remove unused Cygwin-specifc code.

2011-05-02  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/features.h [__CYGWIN__] (_POSIX_SPIN_LOCKS): Define.
	* libc/include/sys/types.h: Cygwin provides its own pthread_spinlock_t
	typedef.

2011-04-19  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/signal.h (_sig_func_ptr): Define with int parameter
	per POSIX.  Explain in comment.

2011-04-15  Eric Blake  <eblake@redhat.com>

	* libc/string/strchrnul.c (strchrnul): Fix strchrnul.

2011-03-27  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
